--- a/eshop/views/layout.html
+++ b/eshop/views/layout.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Products</title>
+    @{meta}
     <meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=10" />
+	<meta name="format-detection" content="telephone=no"/>
+	<meta name="viewport" content="width=1024, user-scalable=yes" />
+	<meta name="robots" content="all,follow" />
+	<style type="text/css">
+		body { padding: 50px; margin: 0; font:normal 12px Arial; color: gray }
+		nav { margin-bottom: 20px; }
+		nav a { font-size: 20px; margin-right: 10px; color: gray; texr-decoration: none; }
+
+	</style>
 </head>
 <body>
-	@{body}
- </body>
+
+	<nav>
+        @{foreach m in sitemap()}
+        <a href="@{m.url}">@{m.name}</a>
+        @{end}
+	</nav>
+
+	<div style="padding:20px 0;border-bottom:1px solid #E0E0E0;">
+		Breadcrumb:
+		@{foreach m in sitemap()}
+			<a href="@{m.url}">@{m.name}</a>
+			@{if !m.last}
+			&nbsp; &gt; &nbsp;
+			@{fi}
+		@{end}
+	</div>
+
+	<div>@{body}</div>
+
+
+</body>
 </html>
